[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Jumpling/Jumpling.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Jumpling/Jumpling.png" type="Texture" id=2]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 128.565

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="Jumpling" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ScaleHelper" type="Node2D" parent="."]
scale = Vector2( 1.01284, 0.987159 )

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
position = Vector2( 0, -12 )
texture = ExtResource( 2 )
hframes = 10
vframes = 2
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="GroundDetectors" type="Node2D" parent="."]
visible = false

[node name="GroundDetector1" type="RayCast2D" parent="GroundDetectors"]
position = Vector2( -9, 0 )
enabled = true
cast_to = Vector2( -2, 4 )

[node name="GroundDetector2" type="RayCast2D" parent="GroundDetectors"]
enabled = true
cast_to = Vector2( 0, 4 )

[node name="GroundDetector3" type="RayCast2D" parent="GroundDetectors"]
position = Vector2( 9, 0 )
enabled = true
cast_to = Vector2( 2, 4 )

[node name="PlayerDetection" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="JumpPause" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )

[connection signal="timeout" from="JumpPause" to="." method="_on_jump_pause_timeout"]

[editable path="PlayerDetection"]
